parser.parser.output
Nonterminals useless in grammar

   func_proto


Terminals unused in grammar

   TBREAKKW
   TCONSTKW
   TCLSKW
   TCONTKW
   TDOKW
   TDBLKW
   TELSEKW
   TEXITKW
   TFORKW
   TIFKW
   TLONGKW
   TUNLKW
   TWHLKW
   TQUOTE
   TSQUOTE
   TDOT


Rules useless in grammar

   44 func_proto: TFCTNKW ident TENDKW
   45           | TFCTNKW ident TLPAREN func_decl_args TRPAREN TENDKW
   46           | TFCTNKW ident TASKW ident TENDKW


State 12 conflicts: 2 shift/reduce
State 17 conflicts: 1 shift/reduce
State 41 conflicts: 10 shift/reduce
State 45 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_decl
    5     | func_decl
    6     | expr

    7 block: stmts TENDKW
    8      | TLBRACE stmts TRBRACE
    9      | TLBRACE TRBRACE

   10 var_decl: ident ident
   11         | ident ident TEQUAL expr

   12 func_decl: TFCTNKW ident block
   13          | TFCTNKW ident TLPAREN func_decl_args TRPAREN block
   14          | TFCTNKW ident TASKW ident block
   15          | TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW ident TENDKW
   16          | TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW ident block

   17 func_decl_args: %empty
   18               | var_decl
   19               | func_decl_args TCOMMA var_decl

   20 ident: TIDENTIFIER

   21 string_literal: TSLITERAL

   22 numeric: TINTEGER
   23        | TDOUBLE

   24 expr: ident TEQUAL expr
   25     | ident TLPAREN call_args TRPAREN
   26     | ident
   27     | numeric
   28     | string_literal
   29     | expr comparison expr
   30     | TLPAREN expr TRPAREN

   31 call_args: %empty
   32          | expr
   33          | call_args TCOMMA expr

   34 comparison: TCEQ
   35           | TCNE
   36           | TCLT
   37           | TCLE
   38           | TCGT
   39           | TCGE
   40           | TPLUS
   41           | TMINUS
   42           | TMUL
   43           | TDIV


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENTIFIER (258) 20
TINTEGER (259) 22
TDOUBLE (260) 23
TSLITERAL (261) 21
TBREAKKW (262)
TCONSTKW (263)
TCLSKW (264)
TCONTKW (265)
TDOKW (266)
TDBLKW (267)
TELSEKW (268)
TENDKW (269) 7 15
TEXITKW (270)
TFORKW (271)
TFCTNKW (272) 12 13 14 15 16
TIFKW (273)
TLONGKW (274)
TUNLKW (275)
TWHLKW (276)
TASKW (277) 14 15 16
TQUOTE (278)
TSQUOTE (279)
TCEQ (280) 34
TCNE (281) 35
TCLT (282) 36
TCLE (283) 37
TCGT (284) 38
TCGE (285) 39
TEQUAL (286) 11 24
TLPAREN (287) 13 15 16 25 30
TRPAREN (288) 13 15 16 25 30
TLBRACE (289) 8 9
TRBRACE (290) 8 9
TCOMMA (291) 19 33
TDOT (292)
TPLUS (293) 40
TMINUS (294) 41
TMUL (295) 42
TDIV (296) 43


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
stmts (44)
    on left: 2 3, on right: 1 3 7 8
stmt (45)
    on left: 4 5 6, on right: 2 3
block (46)
    on left: 7 8 9, on right: 12 13 14 16
var_decl (47)
    on left: 10 11, on right: 4 18 19
func_decl (48)
    on left: 12 13 14 15 16, on right: 5
func_decl_args (49)
    on left: 17 18 19, on right: 13 15 16 19
ident (50)
    on left: 20, on right: 10 11 12 13 14 15 16 24 25 26
string_literal (51)
    on left: 21, on right: 28
numeric (52)
    on left: 22 23, on right: 27
expr (53)
    on left: 24 25 26 27 28 29 30, on right: 6 11 24 29 30 32 33
call_args (54)
    on left: 31 32 33, on right: 25 33
comparison (55)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 29


State 0

    0 $accept: . program $end

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TFCTNKW      shift, and go to state 5
    TLPAREN      shift, and go to state 6

    program         go to state 7
    stmts           go to state 8
    stmt            go to state 9
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 1

   20 ident: TIDENTIFIER .

    $default  reduce using rule 20 (ident)


State 2

   22 numeric: TINTEGER .

    $default  reduce using rule 22 (numeric)


State 3

   23 numeric: TDOUBLE .

    $default  reduce using rule 23 (numeric)


State 4

   21 string_literal: TSLITERAL .

    $default  reduce using rule 21 (string_literal)


State 5

   12 func_decl: TFCTNKW . ident block
   13          | TFCTNKW . ident TLPAREN func_decl_args TRPAREN block
   14          | TFCTNKW . ident TASKW ident block
   15          | TFCTNKW . ident TLPAREN func_decl_args TRPAREN TASKW ident TENDKW
   16          | TFCTNKW . ident TLPAREN func_decl_args TRPAREN TASKW ident block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 16


State 6

   30 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TLPAREN      shift, and go to state 6

    ident           go to state 17
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 18


State 7

    0 $accept: program . $end

    $end  shift, and go to state 19


State 8

    1 program: stmts .
    3 stmts: stmts . stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TFCTNKW      shift, and go to state 5
    TLPAREN      shift, and go to state 6

    $default  reduce using rule 1 (program)

    stmt            go to state 20
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 9

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


State 10

    4 stmt: var_decl .

    $default  reduce using rule 4 (stmt)


State 11

    5 stmt: func_decl .

    $default  reduce using rule 5 (stmt)


State 12

   10 var_decl: ident . ident
   11         | ident . ident TEQUAL expr
   24 expr: ident . TEQUAL expr
   25     | ident . TLPAREN call_args TRPAREN
   26     | ident .

    TIDENTIFIER  shift, and go to state 1
    TEQUAL       shift, and go to state 21
    TLPAREN      shift, and go to state 22

    TIDENTIFIER  [reduce using rule 26 (expr)]
    TLPAREN      [reduce using rule 26 (expr)]
    $default     reduce using rule 26 (expr)

    ident  go to state 23


State 13

   28 expr: string_literal .

    $default  reduce using rule 28 (expr)


State 14

   27 expr: numeric .

    $default  reduce using rule 27 (expr)


State 15

    6 stmt: expr .
   29 expr: expr . comparison expr

    TCEQ    shift, and go to state 24
    TCNE    shift, and go to state 25
    TCLT    shift, and go to state 26
    TCLE    shift, and go to state 27
    TCGT    shift, and go to state 28
    TCGE    shift, and go to state 29
    TPLUS   shift, and go to state 30
    TMINUS  shift, and go to state 31
    TMUL    shift, and go to state 32
    TDIV    shift, and go to state 33

    $default  reduce using rule 6 (stmt)

    comparison  go to state 34


State 16

   12 func_decl: TFCTNKW ident . block
   13          | TFCTNKW ident . TLPAREN func_decl_args TRPAREN block
   14          | TFCTNKW ident . TASKW ident block
   15          | TFCTNKW ident . TLPAREN func_decl_args TRPAREN TASKW ident TENDKW
   16          | TFCTNKW ident . TLPAREN func_decl_args TRPAREN TASKW ident block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TFCTNKW      shift, and go to state 5
    TASKW        shift, and go to state 35
    TLPAREN      shift, and go to state 36
    TLBRACE      shift, and go to state 37

    stmts           go to state 38
    stmt            go to state 9
    block           go to state 39
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 17

   24 expr: ident . TEQUAL expr
   25     | ident . TLPAREN call_args TRPAREN
   26     | ident .

    TEQUAL   shift, and go to state 21
    TLPAREN  shift, and go to state 22

    TLPAREN   [reduce using rule 26 (expr)]
    $default  reduce using rule 26 (expr)


State 18

   29 expr: expr . comparison expr
   30     | TLPAREN expr . TRPAREN

    TCEQ     shift, and go to state 24
    TCNE     shift, and go to state 25
    TCLT     shift, and go to state 26
    TCLE     shift, and go to state 27
    TCGT     shift, and go to state 28
    TCGE     shift, and go to state 29
    TRPAREN  shift, and go to state 40
    TPLUS    shift, and go to state 30
    TMINUS   shift, and go to state 31
    TMUL     shift, and go to state 32
    TDIV     shift, and go to state 33

    comparison  go to state 34


State 19

    0 $accept: program $end .

    $default  accept


State 20

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


State 21

   24 expr: ident TEQUAL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TLPAREN      shift, and go to state 6

    ident           go to state 17
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 41


State 22

   25 expr: ident TLPAREN . call_args TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TLPAREN      shift, and go to state 6

    $default  reduce using rule 31 (call_args)

    ident           go to state 17
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 42
    call_args       go to state 43


State 23

   10 var_decl: ident ident .
   11         | ident ident . TEQUAL expr

    TEQUAL  shift, and go to state 44

    $default  reduce using rule 10 (var_decl)


State 24

   34 comparison: TCEQ .

    $default  reduce using rule 34 (comparison)


State 25

   35 comparison: TCNE .

    $default  reduce using rule 35 (comparison)


State 26

   36 comparison: TCLT .

    $default  reduce using rule 36 (comparison)


State 27

   37 comparison: TCLE .

    $default  reduce using rule 37 (comparison)


State 28

   38 comparison: TCGT .

    $default  reduce using rule 38 (comparison)


State 29

   39 comparison: TCGE .

    $default  reduce using rule 39 (comparison)


State 30

   40 comparison: TPLUS .

    $default  reduce using rule 40 (comparison)


State 31

   41 comparison: TMINUS .

    $default  reduce using rule 41 (comparison)


State 32

   42 comparison: TMUL .

    $default  reduce using rule 42 (comparison)


State 33

   43 comparison: TDIV .

    $default  reduce using rule 43 (comparison)


State 34

   29 expr: expr comparison . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TLPAREN      shift, and go to state 6

    ident           go to state 17
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 45


State 35

   14 func_decl: TFCTNKW ident TASKW . ident block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 46


State 36

   13 func_decl: TFCTNKW ident TLPAREN . func_decl_args TRPAREN block
   15          | TFCTNKW ident TLPAREN . func_decl_args TRPAREN TASKW ident TENDKW
   16          | TFCTNKW ident TLPAREN . func_decl_args TRPAREN TASKW ident block
   30 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TLPAREN      shift, and go to state 6

    $default  reduce using rule 17 (func_decl_args)

    var_decl        go to state 47
    func_decl_args  go to state 48
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 18


State 37

    8 block: TLBRACE . stmts TRBRACE
    9      | TLBRACE . TRBRACE

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TFCTNKW      shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TRBRACE      shift, and go to state 49

    stmts           go to state 50
    stmt            go to state 9
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 38

    3 stmts: stmts . stmt
    7 block: stmts . TENDKW

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TENDKW       shift, and go to state 51
    TFCTNKW      shift, and go to state 5
    TLPAREN      shift, and go to state 6

    stmt            go to state 20
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 39

   12 func_decl: TFCTNKW ident block .

    $default  reduce using rule 12 (func_decl)


State 40

   30 expr: TLPAREN expr TRPAREN .

    $default  reduce using rule 30 (expr)


State 41

   24 expr: ident TEQUAL expr .
   29     | expr . comparison expr

    TCEQ    shift, and go to state 24
    TCNE    shift, and go to state 25
    TCLT    shift, and go to state 26
    TCLE    shift, and go to state 27
    TCGT    shift, and go to state 28
    TCGE    shift, and go to state 29
    TPLUS   shift, and go to state 30
    TMINUS  shift, and go to state 31
    TMUL    shift, and go to state 32
    TDIV    shift, and go to state 33

    TCEQ      [reduce using rule 24 (expr)]
    TCNE      [reduce using rule 24 (expr)]
    TCLT      [reduce using rule 24 (expr)]
    TCLE      [reduce using rule 24 (expr)]
    TCGT      [reduce using rule 24 (expr)]
    TCGE      [reduce using rule 24 (expr)]
    TPLUS     [reduce using rule 24 (expr)]
    TMINUS    [reduce using rule 24 (expr)]
    TMUL      [reduce using rule 24 (expr)]
    TDIV      [reduce using rule 24 (expr)]
    $default  reduce using rule 24 (expr)

    comparison  go to state 34


State 42

   29 expr: expr . comparison expr
   32 call_args: expr .

    TCEQ    shift, and go to state 24
    TCNE    shift, and go to state 25
    TCLT    shift, and go to state 26
    TCLE    shift, and go to state 27
    TCGT    shift, and go to state 28
    TCGE    shift, and go to state 29
    TPLUS   shift, and go to state 30
    TMINUS  shift, and go to state 31
    TMUL    shift, and go to state 32
    TDIV    shift, and go to state 33

    $default  reduce using rule 32 (call_args)

    comparison  go to state 34


State 43

   25 expr: ident TLPAREN call_args . TRPAREN
   33 call_args: call_args . TCOMMA expr

    TRPAREN  shift, and go to state 52
    TCOMMA   shift, and go to state 53


State 44

   11 var_decl: ident ident TEQUAL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TLPAREN      shift, and go to state 6

    ident           go to state 17
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 54


State 45

   29 expr: expr . comparison expr
   29     | expr comparison expr .

    TCEQ    shift, and go to state 24
    TCNE    shift, and go to state 25
    TCLT    shift, and go to state 26
    TCLE    shift, and go to state 27
    TCGT    shift, and go to state 28
    TCGE    shift, and go to state 29
    TPLUS   shift, and go to state 30
    TMINUS  shift, and go to state 31
    TMUL    shift, and go to state 32
    TDIV    shift, and go to state 33

    TCEQ      [reduce using rule 29 (expr)]
    TCNE      [reduce using rule 29 (expr)]
    TCLT      [reduce using rule 29 (expr)]
    TCLE      [reduce using rule 29 (expr)]
    TCGT      [reduce using rule 29 (expr)]
    TCGE      [reduce using rule 29 (expr)]
    TPLUS     [reduce using rule 29 (expr)]
    TMINUS    [reduce using rule 29 (expr)]
    TMUL      [reduce using rule 29 (expr)]
    TDIV      [reduce using rule 29 (expr)]
    $default  reduce using rule 29 (expr)

    comparison  go to state 34


State 46

   14 func_decl: TFCTNKW ident TASKW ident . block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TFCTNKW      shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACE      shift, and go to state 37

    stmts           go to state 38
    stmt            go to state 9
    block           go to state 55
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 47

   18 func_decl_args: var_decl .

    $default  reduce using rule 18 (func_decl_args)


State 48

   13 func_decl: TFCTNKW ident TLPAREN func_decl_args . TRPAREN block
   15          | TFCTNKW ident TLPAREN func_decl_args . TRPAREN TASKW ident TENDKW
   16          | TFCTNKW ident TLPAREN func_decl_args . TRPAREN TASKW ident block
   19 func_decl_args: func_decl_args . TCOMMA var_decl

    TRPAREN  shift, and go to state 56
    TCOMMA   shift, and go to state 57


State 49

    9 block: TLBRACE TRBRACE .

    $default  reduce using rule 9 (block)


State 50

    3 stmts: stmts . stmt
    8 block: TLBRACE stmts . TRBRACE

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TFCTNKW      shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TRBRACE      shift, and go to state 58

    stmt            go to state 20
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 51

    7 block: stmts TENDKW .

    $default  reduce using rule 7 (block)


State 52

   25 expr: ident TLPAREN call_args TRPAREN .

    $default  reduce using rule 25 (expr)


State 53

   33 call_args: call_args TCOMMA . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TLPAREN      shift, and go to state 6

    ident           go to state 17
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 59


State 54

   11 var_decl: ident ident TEQUAL expr .
   29 expr: expr . comparison expr

    TCEQ    shift, and go to state 24
    TCNE    shift, and go to state 25
    TCLT    shift, and go to state 26
    TCLE    shift, and go to state 27
    TCGT    shift, and go to state 28
    TCGE    shift, and go to state 29
    TPLUS   shift, and go to state 30
    TMINUS  shift, and go to state 31
    TMUL    shift, and go to state 32
    TDIV    shift, and go to state 33

    $default  reduce using rule 11 (var_decl)

    comparison  go to state 34


State 55

   14 func_decl: TFCTNKW ident TASKW ident block .

    $default  reduce using rule 14 (func_decl)


State 56

   13 func_decl: TFCTNKW ident TLPAREN func_decl_args TRPAREN . block
   15          | TFCTNKW ident TLPAREN func_decl_args TRPAREN . TASKW ident TENDKW
   16          | TFCTNKW ident TLPAREN func_decl_args TRPAREN . TASKW ident block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TFCTNKW      shift, and go to state 5
    TASKW        shift, and go to state 60
    TLPAREN      shift, and go to state 6
    TLBRACE      shift, and go to state 37

    stmts           go to state 38
    stmt            go to state 9
    block           go to state 61
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 57

   19 func_decl_args: func_decl_args TCOMMA . var_decl

    TIDENTIFIER  shift, and go to state 1

    var_decl  go to state 62
    ident     go to state 63


State 58

    8 block: TLBRACE stmts TRBRACE .

    $default  reduce using rule 8 (block)


State 59

   29 expr: expr . comparison expr
   33 call_args: call_args TCOMMA expr .

    TCEQ    shift, and go to state 24
    TCNE    shift, and go to state 25
    TCLT    shift, and go to state 26
    TCLE    shift, and go to state 27
    TCGT    shift, and go to state 28
    TCGE    shift, and go to state 29
    TPLUS   shift, and go to state 30
    TMINUS  shift, and go to state 31
    TMUL    shift, and go to state 32
    TDIV    shift, and go to state 33

    $default  reduce using rule 33 (call_args)

    comparison  go to state 34


State 60

   15 func_decl: TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW . ident TENDKW
   16          | TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW . ident block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 64


State 61

   13 func_decl: TFCTNKW ident TLPAREN func_decl_args TRPAREN block .

    $default  reduce using rule 13 (func_decl)


State 62

   19 func_decl_args: func_decl_args TCOMMA var_decl .

    $default  reduce using rule 19 (func_decl_args)


State 63

   10 var_decl: ident . ident
   11         | ident . ident TEQUAL expr

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 23


State 64

   15 func_decl: TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW ident . TENDKW
   16          | TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW ident . block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSLITERAL    shift, and go to state 4
    TENDKW       shift, and go to state 65
    TFCTNKW      shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACE      shift, and go to state 37

    stmts           go to state 38
    stmt            go to state 9
    block           go to state 66
    var_decl        go to state 10
    func_decl       go to state 11
    ident           go to state 12
    string_literal  go to state 13
    numeric         go to state 14
    expr            go to state 15


State 65

   15 func_decl: TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW ident TENDKW .

    $default  reduce using rule 15 (func_decl)


State 66

   16 func_decl: TFCTNKW ident TLPAREN func_decl_args TRPAREN TASKW ident block .

    $default  reduce using rule 16 (func_decl)
